# think-sim-os

./: .env.example  README.md  pyproject.toml  requirements.txt
app/: config.py  db.sqlite3  dependencies.py  init_db.py  main.py
app/models/: artifact.py  graph.py  rule.py  session.py  snapshot.py
app/routers/: chat.py  exports.py  osenv.py  rules.py  sessions.py  simulation.py
app/services/: exporter.py  graph_builder.py  replay.py  scoring.py  simulation_engine.py  storage.py  workspace.py
app/static/: htmx.min.js  style.css
app/templates/: index.html  layout.html  os.html  sesseion.html  simulation.html  workspace.html
tests/: test_graph_builder.py  test_simulation.py
