[project]
name = "think-sim-os"
version = "0.1.0"
description = "Web OS for human thought simulation with Windows artifact export."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.2",
    "uvicorn[standard]==0.30.6",
    "jinja2==3.1.4",
    "sqlalchemy==2.0.34",
    "pydantic==2.9.2",
    "python-dotenv==1.0.1",
    "networkx==3.2.1",
    "orjson==3.10.7",
    "pytest==8.3.3",
    "httpx==0.27.2"
]

[tool.pytest.ini_options]
pythonpath = ["app"]
